# writers-block

./: .gitignore  INTEGRATION_SUMMARY.md  builder.context.readme.md
backend/: .env.example  .gitignore  ENV_SETUP.md  README.md  REFACTORING_SUMMARY.md  pyproject.toml  run.py  test_api.py  test_feedback_api.py  test_text_processing.py
backend/tests/: __init__.py
backend/writers_block_service/: __init__.py  api.py  cli.py  config.py  llm_client.py  main.py  models.py  utils.py
backend/writers_block_service/controller/: __init__.py  routes.py
backend/writers_block_service/core/: __init__.py  config.py  exceptions.py  logging.py
backend/writers_block_service/models/: __init__.py  schemas.py
backend/writers_block_service/services/: feedback_service.py  llm_service.py
backend/writers_block_service/utils/: dev.py  helpers.py
docs/: core_architecture.readme.md  product_spec.readme.md
docs/checkpoints/: feature4.readme.md
docs/features/: feedback_icons_demo.md
docs/launch/: controlled_launch.md  distribution_strategy.md  feedback_strategy.md  store_listing.md
docs/prompt/: devlopment.txt
extension/chrome-extension/: .gitignore  README.md  background.js  content.js  manifest.json  package-lock.json  package.json  popup.html  popup.js  settings.html  styles.css  test_error_handling.js  test_integration.js  webpack.config.js
extension/chrome-extension/src/components/: ActionButtons.jsx  App.jsx  CustomStylesTester.jsx  DebugPanel.jsx  ErrorMessage.jsx  FeedbackWidget.css  FeedbackWidget.jsx  FloatingWindow.jsx  ResultDisplay.jsx  SuccessMessage.jsx
(+33 files in other folders)
