[project]
name = "writers-block-service"
version = "0.1.0"
description = "AI-powered writing assistant backend for Salesforce Quip"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.16",
    "fastapi>=0.116.1",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "mangum>=0.17.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.scripts]
dev = "writers_block_service.utils.dev:dev"
start = "writers_block_service.utils.dev:start"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88
